--- a/myapp/templates/signup.html
+++ b/myapp/templates/signup.html
@@ -14,6 +14,11 @@
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+
+      <p class="text-center mt-3">
+        Have an account? <a href="{% url 'login' %}">login here</a>
+      </p>
+
     </form>
   </div>
 </body>
