showing user id in sign up page (getting data from database user count and shoi in fontend)

--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -8,6 +8,12 @@
 <body>
 
    <h1> this is home </h1>
+
+   <p class="text-center mt-3">
+     <a href="{% url 'login' %}">Log in Page</a>
+  </p>
+
+
     
 </body>
 </html>
