--- a/myapp/templates/signup.html
+++ b/myapp/templates/signup.html
@@ -12,7 +12,9 @@
 
     <!-- Display the total user count -->
     <p class="text-center">
-      Your ID <strong>{{ user_count }}</strong> (Please remember for login) 
+        <h2>ID : <strong>{{ user_count }}</strong> </h2>
+        
+        <h3 style="color: red;">(Please remember for login) </h3>
     </p>
 
     <form method="POST" action="">
